# CurrencyExchange

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ANALYSIS_COMPLETE.md  BUGS_AND_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_COMPLETE.md  ROADMAP.md  TRANSFORMATION_COMPLETE.md
include/core/: language.h  theme.h
include/network/: currencyapimanager.h
include/ui/: mainwindow.h
resources/: resources.qrc
resources/translations/: bitcoin_es.ts  bitcoinsatoshicalculator_es.ts
scripts/: deploy.bat  deploy_linux.sh.in  deploy_macos.sh.in
src/: main.cpp
src/core/: language.cpp  theme.cpp
src/network/: currencyapimanager.cpp
src/ui/: mainwindow.cpp
tests/: README.md  test_currencyapi.cpp  test_mainwindow.cpp
